--- a/index.html
+++ b/index.html
@@ -2,17 +2,19 @@
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>チャットルーム</title>
+  <title>チャット</title>
   <link rel="stylesheet" href="style.css">
+  <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.5.0/firebase-database.js"></script>
 </head>
 <body>
-  <div id="chat-container">
-    <div id="messages"></div>
-    <input id="username" placeholder="名前を入力">
-    <input id="message" placeholder="メッセージを入力">
-    <button onclick="sendMessage()">送信</button>
-  </div>
-  <script src="/socket.io/socket.io.js"></script>
-  <script src="client.js"></script>
+  <h1>チャットルーム 💬</h1>
+  <div id="chat-box"></div>
+  <form id="chat-form">
+    <input type="text" id="message" placeholder="メッセージを入力">
+    <button type="submit">送信</button>
+  </form>
+  <script src="main.js"></script>
 </body>
 </html>
